SM-Dev/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Response</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Reopened</fullName>
        </values>
        <values>
            <fullName>Routing</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Waiting on Product</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Form_Received_Date__c</fullName>
        <label>Account Form Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Form_Received_Notes__c</fullName>
        <label>Account Form Received_Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Pictures_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Pictures Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Received_Date__c</fullName>
        <label>Approval Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Received_Notes__c</fullName>
        <label>Approval Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Artwork_Received_Date__c</fullName>
        <label>Artwork Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Artwork_Received_Notes__c</fullName>
        <label>Artwork Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Artwork_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Artwork Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Invoice_Sent__c</fullName>
        <label>Bulk Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Created_Date__c</fullName>
        <label>Bulk Order Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Order Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Date__c</fullName>
        <label>Bulk Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Order_Number__c</fullName>
        <label>Bulk Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Payment_Captured_Date__c</fullName>
        <label>Bulk Payment Captured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulk_Payment_Captured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Payment Captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulk_Shipping_Confirmation_Sent__c</fullName>
        <label>Bulk Shipping Confirmation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Status__c</fullName>
        <label>CC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CC Approved</fullName>
                </value>
                <value>
                    <fullName>CC Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CL_Status__c</fullName>
        <label>CL Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Artwork</fullName>
                </value>
                <value>
                    <fullName>Waiting for Mock Up</fullName>
                </value>
                <value>
                    <fullName>Waiting for Pantone(s)</fullName>
                </value>
                <value>
                    <fullName>Waiting for Parts</fullName>
                </value>
                <value>
                    <fullName>Waiting for PO</fullName>
                </value>
                <value>
                    <fullName>Waiting for Proof</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval/Account Form</fullName>
                </value>
                <value>
                    <fullName>Waiting for Freight Quote</fullName>
                </value>
                <value>
                    <fullName>Waiting for Logo Payment</fullName>
                </value>
                <value>
                    <fullName>Waiting for Cooler Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Reason__c</fullName>
        <label>Case Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>20 oz Lid Gasket</fullName>
                </value>
                <value>
                    <fullName>30 oz Lid Gasket</fullName>
                </value>
                <value>
                    <fullName>Account Information Update</fullName>
                </value>
                <value>
                    <fullName>Account Registration</fullName>
                </value>
                <value>
                    <fullName>Account Status</fullName>
                </value>
                <value>
                    <fullName>BarBQ/ Brew Master</fullName>
                </value>
                <value>
                    <fullName>Big Box Dealer Return</fullName>
                </value>
                <value>
                    <fullName>Bottle Key</fullName>
                </value>
                <value>
                    <fullName>Bottle Round-Up</fullName>
                </value>
                <value>
                    <fullName>Bowed Lid</fullName>
                </value>
                <value>
                    <fullName>Cancelled but Still Shipped</fullName>
                </value>
                <value>
                    <fullName>Cancel Order</fullName>
                </value>
                <value>
                    <fullName>Carrier Issue</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Catalog Removal</fullName>
                </value>
                <value>
                    <fullName>Checkout</fullName>
                </value>
                <value>
                    <fullName>Check Received</fullName>
                </value>
                <value>
                    <fullName>Collegiate</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Complimentary Registration Gift</fullName>
                </value>
                <value>
                    <fullName>Component Install on Cooler</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Credit Card Decline</fullName>
                </value>
                <value>
                    <fullName>Credit Limit Question</fullName>
                </value>
                <value>
                    <fullName>Credit Status</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Inquiry</fullName>
                </value>
                <value>
                    <fullName>Custom Logo Reorder</fullName>
                </value>
                <value>
                    <fullName>Damaged in Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chase_ID__c</fullName>
        <label>Chase ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Ice Blue</fullName>
                </value>
                <value>
                    <fullName>Seafoam</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Camo</fullName>
                </value>
                <value>
                    <fullName>Tahoe Blue/ Fog Gray</fullName>
                </value>
                <value>
                    <fullName>Tan</fullName>
                </value>
                <value>
                    <fullName>Tan/Blaze Orange</fullName>
                </value>
                <value>
                    <fullName>Tahoe Blue</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Olive Green</fullName>
                </value>
                <value>
                    <fullName>Stainless</fullName>
                </value>
                <value>
                    <fullName>Brick Red</fullName>
                </value>
                <value>
                    <fullName>Charcoal</fullName>
                </value>
                <value>
                    <fullName>High Country</fullName>
                </value>
                <value>
                    <fullName>Sky Blue</fullName>
                </value>
                <value>
                    <fullName>Coral</fullName>
                </value>
                <value>
                    <fullName>Storm Gray</fullName>
                </value>
                <value>
                    <fullName>Everglade Sand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CompanyPicklist__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Al Hansen</fullName>
                </value>
                <value>
                    <fullName>Backbone Media</fullName>
                </value>
                <value>
                    <fullName>Bazaarvoice</fullName>
                </value>
                <value>
                    <fullName>Bruckman Rubber</fullName>
                </value>
                <value>
                    <fullName>Carlson Print</fullName>
                </value>
                <value>
                    <fullName>CHP</fullName>
                </value>
                <value>
                    <fullName>ColorFX Des Moines Plant Only</fullName>
                </value>
                <value>
                    <fullName>Corra</fullName>
                </value>
                <value>
                    <fullName>DFM</fullName>
                </value>
                <value>
                    <fullName>Dutchland Plastics</fullName>
                </value>
                <value>
                    <fullName>Elgin Fasteners - India</fullName>
                </value>
                <value>
                    <fullName>Elgin Fasteners - Tennessee</fullName>
                </value>
                <value>
                    <fullName>Erin Rope</fullName>
                </value>
                <value>
                    <fullName>Field Scout</fullName>
                </value>
                <value>
                    <fullName>Hard Candy Shell</fullName>
                </value>
                <value>
                    <fullName>inMotionNow</fullName>
                </value>
                <value>
                    <fullName>International Print and Packaging New York</fullName>
                </value>
                <value>
                    <fullName>International Print and Packaging Texas</fullName>
                </value>
                <value>
                    <fullName>McCann Plastics</fullName>
                </value>
                <value>
                    <fullName>MCGarrah Jessee</fullName>
                </value>
                <value>
                    <fullName>Mhollad</fullName>
                </value>
                <value>
                    <fullName>Mold In Graphics</fullName>
                </value>
                <value>
                    <fullName>OHL</fullName>
                </value>
                <value>
                    <fullName>Omaha Box</fullName>
                </value>
                <value>
                    <fullName>Omega Plastics, LLOC.</fullName>
                </value>
                <value>
                    <fullName>P2/Owner Revolution</fullName>
                </value>
                <value>
                    <fullName>Packaging Corporation of America - Wisconsin Plant Only</fullName>
                </value>
                <value>
                    <fullName>Pierry Software</fullName>
                </value>
                <value>
                    <fullName>Plastic Professionals</fullName>
                </value>
                <value>
                    <fullName>Rackspace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>inContact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooler_Payment_Received_Date__c</fullName>
        <label>Cooler Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cooler_Payment_Received_Notes__c</fullName>
        <label>Cooler Payment Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cooler_Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cooler Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Compliment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Compliment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Added for RMA Process</description>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Purchase_Years_Owned__c</fullName>
        <label>Date Purchase/Years Owned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Purchase__c</fullName>
        <label>Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carrier Shipment</fullName>
                </value>
                <value>
                    <fullName>Customer Pickup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_FollowUp_Date__c</fullName>
        <label>Due/Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration_by_Hours__c</fullName>
        <formula>( First_Response__c - CreatedDate )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration by Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENSX_EDM__Product_del__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENSX_EDM__Return_Order_Number__c</fullName>
        <label>Return Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Case_Number__c</fullName>
        <label>ERP Case Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Created_By__c</fullName>
        <label>ERP Created By</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when a new email is received on the case.</inlineHelpText>
        <label>Email Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Email_Address__c</fullName>
        <label>Employee Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_First_Name__c</fullName>
        <label>Employee First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Last_Name__c</fullName>
        <label>Employee Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epicor_Case__c</fullName>
        <description>Added for RMA Process</description>
        <label>Epicor Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalated_Reason__c</fullName>
        <label>Escalated Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Burn</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>Cut/Laceration</fullName>
                </value>
                <value>
                    <fullName>Legal/Lawsuit</fullName>
                </value>
                <value>
                    <fullName>Prop 65</fullName>
                </value>
                <value>
                    <fullName>Product Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Number__c</fullName>
        <label>Est. Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FedEx_Email__c</fullName>
        <formula>Account.PersonContact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_Packaging_Type__c</fullName>
        <formula>&quot;YOUR_PACKAGING&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Packaging Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_Postal_Code__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_Service_Type__c</fullName>
        <formula>&quot;FEDEX_GROUND&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_ShipmentType__c</fullName>
        <formula>&quot;RETURN&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedEx ShipmentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FedEx_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FedEx Shipment</label>
        <referenceTo>zkfedex__Shipment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_Case_ID__c</fullName>
        <label>Fed Ex Case ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Ex City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_Country__c</fullName>
        <formula>Account.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Ex Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_Delivery_Status__c</fullName>
        <label>Fed Ex Delivery Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_Shipmate_Pref__c</fullName>
        <formula>&quot;ShipmatePreference-0002&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Ex Shipmate Pref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Ex State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fed_Ex_Street__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fed Ex Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FexEx_Customer_Name__c</fullName>
        <formula>Account.FirstName + &quot; &quot; +  Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FexEx Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Logo_Received_Date__c</fullName>
        <label>Final Logo Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Logo_Received_Notes__c</fullName>
        <label>Final Logo Received Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Logo_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Logo Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_In_Hands_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firm In Hands Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstRespond__c</fullName>
        <description>capture the  Time Stamp of the First Responce of case Email  from workflow</description>
        <label>FirstResponse</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response__c</fullName>
        <label>First Response</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Free_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Free_Products__c</fullName>
        <label>Free Products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Badge</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Drain Plugs</fullName>
                </value>
                <value>
                    <fullName>Feet</fullName>
                </value>
                <value>
                    <fullName>Gasket</fullName>
                </value>
                <value>
                    <fullName>Handle</fullName>
                </value>
                <value>
                    <fullName>Hopper Strap</fullName>
                </value>
                <value>
                    <fullName>Rambler Lid</fullName>
                </value>
                <value>
                    <fullName>Swag Request</fullName>
                </value>
                <value>
                    <fullName>Tundra Latches</fullName>
                </value>
                <value>
                    <fullName>Stash Can</fullName>
                </value>
                <value>
                    <fullName>Zipper Lube</fullName>
                </value>
                <value>
                    <fullName>Sticker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fundraiser_Inquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundraiser Inquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hear_of_Us__c</fullName>
        <label>Hear of Us</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Store</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>In_Hands_Date__c</fullName>
        <label>In Hands Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Industry_Program__c</fullName>
        <label>Industry Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro/guide</fullName>
                </value>
                <value>
                    <fullName>First responders</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>BBQ Pitmaster</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inside Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Rep__c</fullName>
        <formula>Account.Inside_Sales_Rep_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inside Sales Rep</label>
        <type>Text</type>
    </fields>
</CustomObject>